[gd_scene format=3 uid="uid://ci6nhkx4w6kqs"]

[ext_resource type="Script" uid="uid://dt0iyahs86i76" path="res://scripts/game_management/game_state_manager.gd" id="1_vdkql"]
[ext_resource type="Script" uid="uid://g3cjsxu4h2a2" path="res://addons/godot_state_charts/transition.gd" id="5_bf3xv"]
[ext_resource type="Script" uid="uid://cd7f64u4xnivl" path="res://scripts/game_management/level_state_manager.gd" id="6_e4ydo"]
[ext_resource type="Script" uid="uid://mbpu8h6nkhu8" path="res://scripts/game_management/main_menu/pause_menu.gd" id="7_7hc34"]
[ext_resource type="Script" uid="uid://du2s6xmqk8na6" path="res://scripts/game_management/game_over_screen.gd" id="8_1x18l"]
[ext_resource type="Script" uid="uid://cf1exjm4tqkcc" path="res://scripts/game_management/main_menu/fade_screen.gd" id="8_k6y2d"]
[ext_resource type="Script" uid="uid://cmlfnal2o37ys" path="res://addons/godot_state_charts/state_chart.gd" id="13_ex211"]
[ext_resource type="Script" uid="uid://bhy7it06w5oxr" path="res://addons/godot_state_charts/compound_state.gd" id="14_lx3lp"]
[ext_resource type="Script" uid="uid://b2onxl0bnlyi7" path="res://addons/godot_state_charts/atomic_state.gd" id="15_mqd0o"]

[sub_resource type="Animation" id="Animation_g2vn4"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:theme_override_colors/font_color:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dniiw"]
resource_name = "game over"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:theme_override_colors/font_color:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1.5, 2.5, 3)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_samqm"]
_data = {
&"RESET": SubResource("Animation_g2vn4"),
&"game over": SubResource("Animation_dniiw")
}

[sub_resource type="Animation" id="Animation_386je"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tfms1"]
resource_name = "fade in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_o1hwq"]
resource_name = "fade out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c2k5l"]
_data = {
&"RESET": SubResource("Animation_386je"),
&"fade in": SubResource("Animation_tfms1"),
&"fade out": SubResource("Animation_o1hwq")
}

[node name="GameStateManager" type="Node3D" unique_id=2044945271]
process_mode = 3
script = ExtResource("1_vdkql")

[node name="GameState" type="Node" parent="." unique_id=1355890288]
script = ExtResource("13_ex211")

[node name="Root" type="Node" parent="GameState" unique_id=673139393]
script = ExtResource("14_lx3lp")
initial_state = NodePath("main menu")

[node name="main menu" type="Node" parent="GameState/Root" unique_id=107167567]
script = ExtResource("15_mqd0o")

[node name="to new game" type="Node" parent="GameState/Root/main menu" unique_id=727639988]
script = ExtResource("5_bf3xv")
to = NodePath("../../game")
event = &"main menu to game"
delay_in_seconds = "0.0"

[node name="to loading screen" type="Node" parent="GameState/Root/main menu" unique_id=1485281111]
script = ExtResource("5_bf3xv")
to = NodePath("../../loading screen")
event = &"main menu to loading screen"
delay_in_seconds = "0.0"

[node name="game" type="Node" parent="GameState/Root" unique_id=799348870]
script = ExtResource("15_mqd0o")

[node name="to main menu" type="Node" parent="GameState/Root/game" unique_id=595453139]
script = ExtResource("5_bf3xv")
to = NodePath("../../main menu")
event = &"game to main menu"
delay_in_seconds = "0.0"

[node name="loading screen" type="Node" parent="GameState/Root" unique_id=1932794287]
script = ExtResource("15_mqd0o")

[node name="to game loaded" type="Node" parent="GameState/Root/loading screen" unique_id=1922051310]
script = ExtResource("5_bf3xv")
to = NodePath("../../game loaded")
event = &"loading screen to game loaded"
delay_in_seconds = "0.0"

[node name="game loaded" type="Node" parent="GameState/Root" unique_id=1764660332]
script = ExtResource("15_mqd0o")

[node name="to game" type="Node" parent="GameState/Root/game loaded" unique_id=880908649]
script = ExtResource("5_bf3xv")
to = NodePath("../../game")
event = &"game loaded to game"
delay_in_seconds = "0.0"

[node name="LevelStateManager" type="Node3D" parent="." unique_id=1594274197]
script = ExtResource("6_e4ydo")

[node name="StateChart" type="Node" parent="LevelStateManager" unique_id=283753793]
script = ExtResource("13_ex211")

[node name="Root" type="Node" parent="LevelStateManager/StateChart" unique_id=1748635168]
script = ExtResource("14_lx3lp")
initial_state = NodePath("empty")

[node name="empty" type="Node" parent="LevelStateManager/StateChart/Root" unique_id=1120881916]
script = ExtResource("15_mqd0o")

[node name="to game play" type="Node" parent="LevelStateManager/StateChart/Root/empty" unique_id=1970549353]
script = ExtResource("5_bf3xv")
to = NodePath("../../game play")
event = &"to game play"
delay_in_seconds = "0.0"

[node name="game play" type="Node" parent="LevelStateManager/StateChart/Root" unique_id=371026939]
script = ExtResource("15_mqd0o")

[node name="to empty" type="Node" parent="LevelStateManager/StateChart/Root/game play" unique_id=1764210909]
script = ExtResource("5_bf3xv")
to = NodePath("../../empty")
event = &"game play to empty"
delay_in_seconds = "0.0"

[node name="to paused" type="Node" parent="LevelStateManager/StateChart/Root/game play" unique_id=483079031]
script = ExtResource("5_bf3xv")
to = NodePath("../../paused")
event = &"game play to paused"
delay_in_seconds = "0.0"

[node name="to game over" type="Node" parent="LevelStateManager/StateChart/Root/game play" unique_id=1227474771]
script = ExtResource("5_bf3xv")
to = NodePath("../../game over")
event = &"game play to game over"
delay_in_seconds = "0.0"

[node name="paused" type="Node" parent="LevelStateManager/StateChart/Root" unique_id=1478575057]
script = ExtResource("15_mqd0o")

[node name="to game play" type="Node" parent="LevelStateManager/StateChart/Root/paused" unique_id=72792722]
script = ExtResource("5_bf3xv")
to = NodePath("../../game play")
event = &"to game play"
delay_in_seconds = "0.0"

[node name="to empty" type="Node" parent="LevelStateManager/StateChart/Root/paused" unique_id=1519271427]
script = ExtResource("5_bf3xv")
to = NodePath("../../empty")
event = &"paused to empty"
delay_in_seconds = "0.0"

[node name="game over" type="Node" parent="LevelStateManager/StateChart/Root" unique_id=518629460]
script = ExtResource("15_mqd0o")

[node name="to empty" type="Node" parent="LevelStateManager/StateChart/Root/game over" unique_id=228552276]
script = ExtResource("5_bf3xv")
to = NodePath("../../empty")
event = &"game over to empty"
delay_in_seconds = "0.0"

[node name="to game play" type="Node" parent="LevelStateManager/StateChart/Root/game over" unique_id=1440789647]
script = ExtResource("5_bf3xv")
to = NodePath("../../game play")
event = &"to game play"
delay_in_seconds = "0.0"

[node name="PauseMenu" type="CanvasLayer" parent="LevelStateManager" unique_id=1705369933]
layer = 5
visible = false
script = ExtResource("7_7hc34")

[node name="GridContainer" type="GridContainer" parent="LevelStateManager/PauseMenu" unique_id=1587706438]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -20.0
offset_right = 28.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PausedTitle" type="Label" parent="LevelStateManager/PauseMenu/GridContainer" unique_id=1847159686]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Paused"

[node name="ContinueButton" type="Button" parent="LevelStateManager/PauseMenu/GridContainer" unique_id=886136259]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Continue
"

[node name="ExitToMainButton" type="Button" parent="LevelStateManager/PauseMenu/GridContainer" unique_id=158404674]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Exit to main menu"

[node name="QuitButton" type="Button" parent="LevelStateManager/PauseMenu/GridContainer" unique_id=94473622]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit game"

[node name="GameOverScreen" type="CanvasLayer" parent="LevelStateManager" unique_id=1292033451]
layer = 4
script = ExtResource("8_1x18l")

[node name="ColorRect" type="ColorRect" parent="LevelStateManager/GameOverScreen" unique_id=1734909786]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Label" type="Label" parent="LevelStateManager/GameOverScreen" unique_id=1339255858]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.5
offset_top = -44.0
offset_right = 173.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6162, 0.714687, 0.79, 0)
theme_override_font_sizes/font_size = 64
text = "Game Over"

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelStateManager/GameOverScreen" unique_id=301725293]
libraries/ = SubResource("AnimationLibrary_samqm")

[node name="FadeScreen" type="CanvasLayer" parent="." unique_id=937490014]
layer = 10
visible = false
script = ExtResource("8_k6y2d")

[node name="ColorRect" type="ColorRect" parent="FadeScreen" unique_id=671261904]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeScreen" unique_id=1558588747]
libraries/ = SubResource("AnimationLibrary_c2k5l")

[connection signal="state_entered" from="GameState/Root/main menu" to="." method="_on_main_menu_state_entered"]
[connection signal="state_exited" from="GameState/Root/main menu" to="." method="_on_main_menu_state_exited"]
[connection signal="state_entered" from="GameState/Root/game" to="." method="_on_game_state_entered"]
[connection signal="state_entered" from="GameState/Root/loading screen" to="." method="_on_loading_screen_state_entered"]
[connection signal="state_processing" from="GameState/Root/loading screen" to="." method="_on_loading_screen_state_processing"]
[connection signal="state_entered" from="GameState/Root/game loaded" to="." method="_on_game_loaded_state_entered"]
[connection signal="state_processing" from="GameState/Root/game loaded" to="." method="_on_game_loaded_state_processing"]
[connection signal="state_entered" from="LevelStateManager/StateChart/Root/empty" to="LevelStateManager" method="_on_empty_state_entered"]
[connection signal="state_entered" from="LevelStateManager/StateChart/Root/game play" to="LevelStateManager" method="_on_game_play_state_entered"]
[connection signal="state_physics_processing" from="LevelStateManager/StateChart/Root/game play" to="LevelStateManager" method="_on_game_play_state_physics_processing"]
[connection signal="state_entered" from="LevelStateManager/StateChart/Root/paused" to="LevelStateManager" method="_on_paused_state_entered"]
[connection signal="state_exited" from="LevelStateManager/StateChart/Root/paused" to="LevelStateManager" method="_on_paused_state_exited"]
[connection signal="state_physics_processing" from="LevelStateManager/StateChart/Root/paused" to="LevelStateManager" method="_on_paused_state_physics_processing"]
[connection signal="state_entered" from="LevelStateManager/StateChart/Root/game over" to="LevelStateManager" method="_on_game_over_state_entered"]
[connection signal="pressed" from="LevelStateManager/PauseMenu/GridContainer/ContinueButton" to="LevelStateManager/PauseMenu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="LevelStateManager/PauseMenu/GridContainer/ExitToMainButton" to="LevelStateManager/PauseMenu" method="_on_exit_to_main_button_pressed"]
[connection signal="pressed" from="LevelStateManager/PauseMenu/GridContainer/QuitButton" to="LevelStateManager/PauseMenu" method="_on_quit_button_pressed"]
[connection signal="animation_finished" from="LevelStateManager/GameOverScreen/AnimationPlayer" to="LevelStateManager/GameOverScreen" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="FadeScreen/AnimationPlayer" to="FadeScreen" method="_on_animation_player_animation_finished"]
